--- a/css/style.css
+++ b/css/style.css
@@ -28,7 +28,7 @@ body {
   font-family: "Montserrat";
   font-weight: 500;
   color: #050405;
-  font-size: 22px;
+  font-size: 137.5%;
   padding: 10px 20px 10px 20px;
   border: solid #7bb9e0 2px;
   text-decoration: none;
@@ -46,7 +46,7 @@ body {
 .copyright {
   padding-top: 30px;
   margin-bottom: 0;
-  font-size: 0.9rem;
+  font-size: 90%;
   color: rgb(226, 245, 192);
 }
 .conintro {width: 60%;
@@ -61,7 +61,7 @@ h1 {
   font-weight: 550;
 }
 h2 {
-  font-size: 2.5rem;
+  font-size: 250%;
   font-family: "Bitter", serif;
 }
 h3 {
@@ -121,7 +121,7 @@ span {
 }
 
 .welcome {
-  font-size: 2.8rem;
+  font-size: 280%;
   font-family: "Sacramento", cursive;
   font-weight: 600;
   margin-bottom: 10px;
